--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -12,6 +12,29 @@
     <script src="/custom.js"></script>
 </head>
 <body>
+ <div class="container">
+        <div th:replace="fragments/navbar"></div>
+    <nav class="row navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#" style="color: #00aced">
+                <i class="fab fa-twitter"></i> Tech Talent Twitter</a>
+        </div>
+        <div id="navbar">
+    <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
+        <li><a href="/tweets">Home</a></li>
+        <li><a href="/tweets/new">New Tweet</a></li>
+    </ul>
+     <ul class="nav navbar-nav navbar-right">
+    <li sec:authorize="isAuthenticated()"><a style="pointer-events: none;color: #00aced">
+      @<span sec:authentication="name"></span></a>
+    <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>
+    <li sec:authorize="!isAuthenticated()"><a href="../login">Login</a></li>
+ </ul>
+ </div>
+</div>
+</nav>
+    <!-- NAvigation bar stuff above-->
 <!-- shows the current feed in Twitter -->
     <div class="container">
         <h2>Tweets</h2>
