--- a/src/main/resources/templates/newTweet.html
+++ b/src/main/resources/templates/newTweet.html
@@ -13,6 +13,29 @@
 </head>
 <body>
     <div class="container">
+        <div th:replace="fragments/navbar"></div>
+    <nav class="row navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#" style="color: #00aced">
+                <i class="fab fa-twitter"></i> Tech Talent Twitter</a>
+        </div>
+        <div id="navbar">
+    <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
+        <li><a href="/tweets">Home</a></li>
+        <li><a href="/tweets/new">New Tweet</a></li>
+    </ul>
+     <ul class="nav navbar-nav navbar-right">
+    <li sec:authorize="isAuthenticated()"><a style="pointer-events: none;color: #00aced">
+      @<span sec:authentication="name"></span></a>
+    <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>
+    <li sec:authorize="!isAuthenticated()"><a href="../login">Login</a></li>
+ </ul>
+ </div>
+</div>
+</nav>
+    <!-- NAvigation bar stuff above-->
+    <div class="container">
         <div class="jumbotron col-md-8 col-md-offset-2">
             <h2>New Tweet</h2><br/>
             <form th:action="@{/tweets}" th:object="${tweet}" method="post" autocomplete="off">
