--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -13,6 +13,28 @@
 </head>
 <body>
     <div class="container">
+        <div th:replace="fragments/navbar"></div>
+    <nav class="row navbar navbar-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#" style="color: #00aced">
+                <i class="fab fa-twitter"></i> Tech Talent Twitter</a>
+        </div>
+        <div id="navbar">
+    <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
+        <li><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/feed.html">Home</a></li>
+        <li><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/newTweet.html">New Tweet</a></li>
+    </ul>
+     <ul class="nav navbar-nav navbar-right">
+    <li sec:authorize="isAuthenticated()"><a style="pointer-events: none;color: #00aced">
+      @<span sec:authentication="name"></span></a>
+    <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>
+    <li sec:authorize="!isAuthenticated()"><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/login.html">Login</a></li>
+ </ul>
+ </div>
+</div>
+</nav>
+    <!-- NAvigation bar stuff above-->
         <h2>Sign up</h2>		
         <form th:action="@{/signup}" th:object="${user}" method="post" autocomplete="off" >
             <div class="form-group">
@@ -36,9 +58,10 @@
                 <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message"></label>
             </div>
             <div class="form-group">
-                <button class="btn btn-md btn-success btn-block" name="Submit" value="Submit" type="Submit" th:text="Submit"></button>
+                <button class="btn btn-md btn-success btn-block" name="Submit" value="Submit" type="Submit" th:text="Submit"
+                th:if="${#fields.hasErrors('user')}" class="validation-message" th:errors="*{user} $(#fields).closest().hide()" >Submit</button>
             </div>
         </form>
     </div>
-</body>
+ </body>
 </html>
