--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,14 +22,14 @@
         </div>
         <div id="navbar">
     <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-        <li><a href="/tweets">Home</a></li>
-        <li><a href="/tweets/new">New Tweet</a></li>
+        <li><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/feed.html">Home</a></li>
+        <li><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/newTweet.html">New Tweet</a></li>
     </ul>
      <ul class="nav navbar-nav navbar-right">
     <li sec:authorize="isAuthenticated()"><a style="pointer-events: none;color: #00aced">
       @<span sec:authentication="name"></span></a>
     <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>
-    <li sec:authorize="!isAuthenticated()"><a href="../login">Login</a></li>
+    <li sec:authorize="!isAuthenticated()"><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/login.html">Login</a></li>
  </ul>
  </div>
 </div>
