empty tweet feed checker

--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -41,7 +41,10 @@
         <div th:each="tweet:${tweetList}">
             <h5>@<span th:text="${tweet.user.username}"></span>
             <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small></h5>
-            <p th:utext="${tweet.message}"></p>
+          
+             <div th:if="${emptyMessage}">
+             <p><span th:utext="${emptyMessage}"></span></p>
+          </div> 
     	</div>
     </div>
 </body>
