--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -12,7 +12,7 @@
     <script src="/custom.js"></script>
 </head>
 <body>
- <div class="container">
+    <div class="container">
         <div th:replace="fragments/navbar"></div>
     <nav class="row navbar navbar-inverse">
     <div class="container-fluid">
@@ -22,14 +22,18 @@
         </div>
         <div id="navbar">
    <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-        <li><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/feed.html">Home</a></li>
-        <li><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/newTweet.html">New Tweet</a></li>
+        <li><a href="feed.html">Home</a></li>
+        <li><a href="newTweet.html">New Tweet</a></li>
     </ul>
      <ul class="nav navbar-nav navbar-right">
     <li sec:authorize="isAuthenticated()"><a style="pointer-events: none;color: #00aced">
       @<span sec:authentication="name"></span></a>
     <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>
-    <li sec:authorize="!isAuthenticated()"><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/login.html">Login</a></li>
+  
+   <li class="dropdown-item-text" sec:authorize="!isAuthenticated()"><a href="login.html">Login</a></li>
+    <li><a class="dropdown-item" sec:authorize="!isAuthenticated()"
+  href="signUp_mini.html">Sign Up</a></li>
+  
  </ul>
  </div>
 </div>
@@ -42,9 +46,7 @@
             <h5>@<span th:text="${tweet.user.username}"></span>
             <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small></h5>
           
-             <div th:if="${emptyMessage}">
-             <p><span th:utext="${emptyMessage}"></span></p>
-          </div> 
+             <h3><div th:if="$emptyMessage" th:utext="${emptyMessage}">Empty Feed</div></h3>
     	</div>
     </div>
 </body>
