--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <script src="/custom.js"></script>
 </head>
 <body>
- <div class="container">
+    <div class="container">
         <div th:replace="fragments/navbar"></div>
     <nav class="row navbar navbar-inverse">
     <div class="container-fluid">
@@ -22,14 +22,15 @@
         </div>
         <div id="navbar">
     <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-        <li><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/feed.html">Home</a></li>
-        <li><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/newTweet.html">New Tweet</a></li>
+        <li><a href="feed.html">Home</a></li>
+        <li><a href="newTweet.html">New Tweet</a></li>
     </ul>
      <ul class="nav navbar-nav navbar-right">
     <li sec:authorize="isAuthenticated()"><a style="pointer-events: none;color: #00aced">
       @<span sec:authentication="name"></span></a>
-    <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>
-    <li sec:authorize="!isAuthenticated()"><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/login.html">Login</a></li>
+    <li><a class="dropdown-item" sec:authorize="!isAuthenticated()"
+  href="fragments/signUp_mini.html">Sign Up</a></li>
+   
  </ul>
  </div>
 </div>
@@ -39,12 +40,23 @@
     <div class="container">
         <h2>Welcome!</h2> 
         <form th:action="@{/login}" method="post"><br/>
-            <input type="text" id="username" name="username" th:placeholder="Username" class="form-control"/> <br/>
-            <input type="password" th:placeholder="Password" id="password" name="password" class="form-control"/> <br/>
+           <!--  <input type="text" id="username" name="username" th:placeholder="Username" class="form-control"/> <br/>
+            <input type="password" th:placeholder="Password" id="password" name="password" class="form-control"/> <br/> -->
+            
+             <div class="form-group">
+                <label th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="validation-message"></label>
+                <input type="text" th:field="*{username}" placeholder="Username" class="form-control"/>
+            </div>
+           
+            <div class="form-group">
+                <input type="password" th:field="*{password}" placeholder="Password" class="form-control"/> 
+                <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message"></label>
+            </div>
+            
             <div align="center" th:if="${param.error}">
                 <h4 style="color: red">Login unsuccessful.</h4>
             </div>
-            <button class="btn btn-md btn-success btn-block" name="Submit" value="Login" type="Submit">Log in</button> 
+            <button class="btn btn-md btn-success btn-block" name="Submit" value="Login" type="Submit" href="feed.html">Log in</button> 
         </form>      
     </div>
 </body>
