--- a/src/main/resources/templates/newTweet.html
+++ b/src/main/resources/templates/newTweet.html
@@ -22,36 +22,33 @@
         </div>
         <div id="navbar">
    <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-        <li><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/feed.html">Home</a></li>
-        <li><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/newTweet.html">New Tweet</a></li>
+        <li><a href="feed.html">Home</a></li>
+        <li><a href="newTweet.html">New Tweet</a></li>
     </ul>
      <ul class="nav navbar-nav navbar-right">
     <li sec:authorize="isAuthenticated()"><a style="pointer-events: none;color: #00aced">
       @<span sec:authentication="name"></span></a>
-    <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>
-    <li sec:authorize="!isAuthenticated()"><a href="file:///C:/Users/Artac/OneDrive/Desktop/TechTalentSouth/Springboot%20Projects/TechTalentTwitter/src/main/resources/templates/login.html">Login</a></li>
- </ul>
+    <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>  
+    <li class="dropdown-item-text" sec:authorize="!isAuthenticated()"><a href="login.html">Login</a></li>
+    <li><a class="dropdown-item" sec:authorize="!isAuthenticated()"
+  href="signUp_mini.html">Sign Up</a></li>
+    
+    
  </div>
 </div>
 </nav>
     <!-- NAvigation bar stuff above-->
+<!-- shows the current feed in Twitter -->
     <div class="container">
-        <div class="jumbotron col-md-8 col-md-offset-2">
-            <h2>New Tweet</h2><br/>
-            <form th:action="@{/tweets}" th:object="${tweet}" method="post" autocomplete="off">
-             <div class="form-group">
-        <textarea rows="5" th:field="*{message}" placeholder="What's happening?" class="form-control"></textarea>
-        <label th:if="${#fields.hasErrors('message')}" th:errors="*{message}" class="validation-message"></label>	
+        <h2>Tweets</h2>
+        <div th:each="tweet:${tweetList}">
+            <h5>@<span th:text="${tweet.user.username}"></span>
+            <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small></h5>
+          
+             <div th:if="${emptyMessage}">
+             <p><span th:utext="${emptyMessage}"></span></p>
+          </div> 
+    	</div>
     </div>
-    <div class="form-group">
-        <button class="btn btn-md btn-success btn-block" name="Submit" value="Submit" type="Submit">Tweet it!</button>
-    </div>
-   </form>
-   <!-- we will display a success message only if a tweet was successfully created -->
-        <div th:if="${successMessage}">
-            <h3><span class="text-success" th:utext="${successMessage}"></span></h3>
-        </div> 
-    </div>
-  </div>
 </body>
 </html>
