--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -11,9 +11,10 @@
     <script src="/custom.js"></script>
 </head>
 <body>
-<!-- nav bar -->
-
- <div class="container">
+<div class="container-fluid">
+    <div th:replace="fragments/navbar"></div>
+    <div class ="container">
+           <div class="container">
         <div th:replace="fragments/navbar"></div>
     <nav class="row navbar navbar-inverse">
     <div class="container-fluid">
@@ -41,20 +42,12 @@
              </div>
           </nav>
       </div>
-<!-- below groups the tweets in the structure where it
-     prints the:
-         
-         @username
-         date posted m/d/yy
-         tweet
-         
-         -->
-  <div class="list-group" th:each="user:${users}">
+      
+          <div class="list-group" th:each="user:${users}">
             <!-- For each user, we'll show their first name, last name, username, and tweet count.  -->
                <a th:href="@{/users/} + ${user.username}" class="list-group-item list-group-item-action">
                  <div class="row">
                    <div class="col col-sm-6">
-                   <div th:replace="fragments/navbar"></div>
                    
                       <h5 class="mb-1" style="color: #00aced"><i class="fab fa-twitter"></i> @<span th:text="${user.username}"></span></h5>	
                    
@@ -62,18 +55,15 @@
                    
                       <span th:if="${!followingStatus.containsKey(user.username)}">(Me)</span></h5>
                    
-                     <h5>Joined <span th:text="${#dates.format(user.createdAt, 'MMMM dd, yyyy')}"></span></h5>
                    </div>
                  
                   <div class="col col-sm-2 col-sm-offset-4 text-right">
                   
                     <h5 class="mb-1"><span th:text="${tweetCounts.get(user.username)}"></span> tweets</h5>
-                     <div th:if="${not #lists.isEmpty(tweetList)}"></div>
-                        <div th:if="${#lists.isEmpty(tweetList)}">
-	                                <h3>No Recent Tweets</h3>
-                             </div>
                       <form th:action="@{/follow/} + ${user.username}" th:if="${followingStatus.containsKey(user.username) 
 				       && !followingStatus.get(user.username)}" method="post">
+				       
+				         <h5>Joined <span th:text="${#dates.format(user.createdAt, 'MMMM dd, yyyy')}"></span></h5>
 				
 				         <button style="float:right" type="Submit" class="btn btn-md btn-success">Follow</button>
 				
@@ -90,5 +80,7 @@
                </div>
               </a>
            </div>
-</body>
+         </div>
+        </div>
+     </body>
 </html>
