--- a/src/main/resources/templates/fragments/goodSignUp.html
+++ b/src/main/resources/templates/fragments/goodSignUp.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="ISO-8859-1">
-    <title>Log in</title>
+    <title>Registration</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="/custom.css">
@@ -28,41 +28,27 @@
      <ul class="nav navbar-nav navbar-right">
     <li sec:authorize="isAuthenticated()"><a style="pointer-events: none;color: #00aced">
       @<span sec:authentication="name"></span></a>
+    <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>
+    
+     <li class="dropdown-item-text" sec:authorize="!isAuthenticated()"><a href="login.html">Login</a></li>
     <li><a class="dropdown-item" sec:authorize="!isAuthenticated()"
-  href="fragments/signUp_mini.html">Sign Up</a></li>
-   
+  href="signUp_mini.html">Sign Up</a></li>
+    
  </ul>
  </div>
 </div>
 </nav>
+
     <!-- NAvigation bar stuff above-->
-<!-- gets the username and password during login process -->
-    <div class="container">
-        <h2>Welcome!</h2> 
-        <form th:action="@{/login}" method="post"><br/>
+
            <!--  <input type="text" id="username" name="username" th:placeholder="Username" class="form-control"/> <br/>
             <input type="password" th:placeholder="Password" id="password" name="password" class="form-control"/> <br/> -->
-            
-             <div class="form-group">
-                <label th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="validation-message"></label>
-                <input type="text" th:field="*{username}" placeholder="Username" class="form-control"/>
-            </div>
-           
-            <div class="form-group">
-                <input type="password" th:field="*{password}" placeholder="Password" class="form-control"/> 
-                <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message"></label>
-            </div>
-            
-            <button class="btn btn-md btn-success btn-block" name="Submit" value="Login" type="Submit" href="feed.html">Log in</button> 
-        </form>
-        
-        <div align="center" th:if="${param.error}">
-                <h4 style="color: red">Login unsuccessful.</h4>
-            </div>
-            
              <div align="center" th:if="${#param.error}">
-                <h4 style="color: green">Login Successful.</h4>
-            </div>      
+                <h4 style="color: green">Sign Up Successful.</h4>
+                 <h4 style="color: green">Click to the Log in button to go to login page.</h4>
+            </div><form th:action="@{/signup}" method="post"><br/>
+            <button class="btn btn-md btn-success btn-block" name="Submit" value="Login" type="Submit" href="feed.html">Log in</button> 
+            
     </div>
-</body>
+ </body>
 </html>
