--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -61,11 +61,12 @@
                 <input type="password" th:field="*{password}" placeholder="Password" class="form-control"/> 
                 <label th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="validation-message"></label>
             </div>
+            
             <div class="form-group">
                 <button class="btn btn-md btn-success btn-block" name="Submit" value="Submit" type="Submit" th:text="Submit"
-                th:if="${#fields.hasErrors('user')}" class="validation-message" th:errors="*{user}" >Submit</button>
+                th:if="${#fields.hasErrors('user')}" href="goodSignUp.html"   th:if="${fields.hasErrors('user')}" href="badSignUp.html" class="validation-message" th:errors="*{user}" >Submit</button>
             </div>
-        </form th:action="@{/signup}" th:object="${user}" th:if="${form.userExists(user.userName)}" method="hide">
+        </form>
     </div>
  </body>
 </html>
