--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -2,30 +2,44 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Nav Bar</title>
+
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
+    <link rel="stylesheet" href="/custom.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="/custom.js"></script>
+    
 </head>
 <body>
-<nav class="row navbar navbar-inverse">
+  <div class="container">
+        <div th:replace="fragments/navbar"></div>
+    <nav class="row navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" href="#" style="color: #00aced">
                 <i class="fab fa-twitter"></i> Tech Talent Twitter</a>
         </div>
-        <!-- for logged in users -->
         <div id="navbar">
     <ul class="nav navbar-nav" sec:authorize="isAuthenticated()">
-        <li><a href="/tweets">Home</a></li>
-        <li><a href="/tweets/new">New Tweet</a></li>
+        <li><a href="feed.html">Home</a></li>
+        <li><a href="newTweet.html">New Tweet</a></li>
     </ul>
-    <!--  login and logged out links -->
      <ul class="nav navbar-nav navbar-right">
     <li sec:authorize="isAuthenticated()"><a style="pointer-events: none;color: #00aced">
       @<span sec:authentication="name"></span></a>
-    <li sec:authorize="isAuthenticated()"><a href="../logout">Logout</a></li>
-    <li sec:authorize="!isAuthenticated()"><a href="../login">Login</a></li>
+    <li><a class="dropdown-item" sec:authorize="!isAuthenticated()"
+  href="fragments/signUp_mini.html">Sign Up</a></li>
+  
+    <li class="dropdown-item-text" sec:authorize="!isAuthenticated()"><a href="login.html">Login</a></li>
+                        
+        
+   
  </ul>
  </div>
 </div>
 </nav>
+
 </body>
 </html>
