--- a/src/main/resources/templates/feed.html
+++ b/src/main/resources/templates/feed.html
@@ -46,8 +46,10 @@
       <a href="header.html" style="color: #00aced"></a>
        <h2>Tweets</h2>
         <div th:each="tweet:${tweetList}">
-            <h5>@<span th:text="${tweet.user.username}"></span>
-            <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small></h5>
+            <h5>@<span th:text="${tweet.user.username}"></span></h5>
+            
+            <!-- old date time for createdAt timestamp  -->
+            <!--  <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small> -->
           
           <h3><div th:if="${getFeed.isEmpty(tweetList)}" th:utext="${emptyMessage}">Empty Feed</div></h3> 
     	</div> 
@@ -55,7 +57,8 @@
 	<!-- <h3>Tweets</h3> -->
 	 <form th:action="@{/tweets/} + ${user.username}" th:if="${followingStatus.containsKey(user.username) 
 				         && followingStatus.get(user.username)}" method="post">
-	        <h5 class="mb-1"><span th:text="${tweetCounts.get(user.username)}"></span> tweets</h5>  
+	        <h5 class="mb-1"><span th:text="${tweetCounts.get(user.username)}"></span> tweets</h5>
+	        <small th:text="${tweet.date}"></small>  
       </form>
 </div>
 <div th:if="${#lists.isEmpty(tweetList)}">
