--- a/src/main/resources/templates/users 2.html
+++ b/src/main/resources/templates/users 2.html
@@ -1,48 +1,42 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head>
-<meta charset="ISO-8859-1">
-<title id="title">User Feed</title>
 
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<head>
+    <meta charset="ISO-8859-1">
+    <title id="title">Users</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link rel="stylesheet" href="/custom.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="/custom.js"></script>
-    <link rel="import" href="fragments/navbar.html">
-    
     <div th:replace="/fragments/headlinks :: head-styles"></div>
 </head>
+</head>
 <body>
-       <div th:replace="fragments/navbar"></div>
-         <div class="container">
+<div class="container-fluid">
+    <div th:replace="fragments/navbar"></div>
+    <div class ="container">
+      <h2>Users</h2>
           <div class="list-group" th:each="user:${users}">
             <!-- For each user, we'll show their first name, last name, username, and tweet count.  -->
-               <h2>Profile for <span th:text="${user.firstName}"></span>
-			<span th:text="${user.lastName}"></span> - <span style="color: #00aced">@<span
-					th:text="${user.username}"></span></span></h2>
-		<h5>Joined <span th:text="${#dates.format(user.createdAt, 'MMMM dd, yyyy')}"></span></h5>
-		<h3>Tweets</h3>	
-	    <div class="list-group" th:each="tweet:${tweetList}">
-	        <div class="list-group-item list-group-item-action">
-	            <div class="d-flex w-100 justify-content-between">
-	                <h5>@<span th:text="${tweet.user.username}"></span>
-						<small th:text="${tweet.date}"></small></h5>
-	            </div>
-	    		<p class="mb-1" th:utext="${tweet.message}"></p>
-	        </div>
-	    </div>
-		    <div th:if="${not #lists.isEmpty(tweetList)}">
-	  
-		</div>
-		<div th:if="${#lists.isEmpty(tweetList)}">
-		    <h3>No Recent Tweets</h3>
-		    </div>
+               <a th:href="@{/users/} + ${user.username}" class="list-group-item list-group-item-action">
+                 <div class="row">
+                   <div class="col col-sm-6">
+                   
+                      <h5 class="mb-1" style="color: #00aced"><i class="fab fa-twitter"></i> @<span th:text="${user.username}"></span></h5>	
+                   
+                      <h5 class="mb-1"><span th:text="${user.firstName}"></span> <span th:text="${user.lastName}"></span>
+                   
+                      <span th:if="${!followingStatus.containsKey(user.username)}">(Me)</span></h5>
+                   
+                   </div>
+                 
+                  <div class="col col-sm-2 col-sm-offset-4 text-right">
+                  
+                    <h5 class="mb-1"><span th:text="${tweetCounts.get(user.username)}"></span> tweets</h5>
                       <form th:action="@{/follow/} + ${user.username}" th:if="${followingStatus.containsKey(user.username) 
 				       && !followingStatus.get(user.username)}" method="post">
-				       
-				         <h5>Joined <span th:text="${#dates.format(user.createdAt, 'MMMM dd, yyyy')}"></span></h5>
 				
 				         <button style="float:right" type="Submit" class="btn btn-md btn-success">Follow</button>
 				
